# musification

./: CMakeLists.txt  README.md
client/client-native/: CMakeLists.txt
client/client-native/src/: main.cc
client/client-web/: httpd.py  package.json
client/client-web/public/: index.html  manifest.json
client/client-web/src/: App.js  index.js
client/client-web/src/components/: About.js  Banner.js  Config.js  Footer.js  Header.js  Home.js  NoMatch.js  Video.js
client/client-web/src/components/video/: DisplayFinalVideo.js  ImageForm.js  UploadVideo.js
client/client-web/src/pb/: service_grpc_web_pb.js  service_pb.js
client/client-web/src/scss/: banner.scss  index.scss
envoy/: envoy.yaml  run_envoy.bash
protos/: CMakeLists.txt
protos/pb/: service.proto
server/: CMakeLists.txt
server/src/: main.cc
